Removed feedbackContainer, feedback on dropzone instead. Adjusted feedback icon positioning. Adjusted dropped draggables, they will now expand to the size of the dropzone, draggables can no longer wrap over multiple lines. Adjusted show solution, only wrong answers will display the correct word, achieves less jumping in the task.

--- a/drag-text.css
+++ b/drag-text.css
@@ -171,31 +171,27 @@
   position: absolute;
 }
 
-.h5p-drag-feedback-container {
-  width: 1em;
-  display: inline-block;
-  position: relative;
-}
 /* Feedback for dropzones */
-.h5p-drag-correct-feedback:after {
-  position: relative;
+.h5p-drag-correct-feedback:before {
+  position: absolute;
+  right: 0.3em;
   font-family: 'H5PFontAwesome4';
   content: "\f00c";
   color: #39692e;
-  padding-left: 0.3em;
 }
 
-.h5p-drag-wrong-feedback:after {
-  position: relative;
+.h5p-drag-wrong-feedback:before {
+  position: absolute;
+  right: 0.3em;
   font-family: 'H5PFontAwesome4';
   content: "\f00d";
   color: #c33f62;
-  padding-left: 0.3em;
 }
 
 /* Dropzone styling */
 .h5p-drag-dropzone-container {
   position: relative;
+  white-space: nowrap;
   display: inline-block;
   padding-right: 0.1em;
   padding-top: 1em;
@@ -203,6 +199,7 @@
 
 .h5p-drag-dropzone {
   position:relative;
+  padding-right: 1em;
   width: 10em;
   height: 2.5em;
   background-color: #cee0f4;
@@ -247,6 +244,8 @@
   background: linear-gradient(to bottom, rgb(234,224,236) 0%, rgb(212,190,216) 100%);
 }
 .h5p-drag-draggable.h5p-drag-dropped {
+  width: 80%;
+  white-space: nowrap;
   color: #235e7c;
   border: 0.1em solid #a9c3d0;
   background: rgb(227,234,238);
